Ajout Pokemon et finalisations details

--- a/PokeApp/PokeApp/Pages/MainPage.xaml
+++ b/PokeApp/PokeApp/Pages/MainPage.xaml
@@ -9,7 +9,7 @@
                 <Image HeightRequest="100" Source="PokeApp.jpg" />
             </Frame>
             <ScrollView>
-                <StackLayout>
+                <StackLayout Margin="10,0">
                     <Image
                         FlexLayout.AlignSelf="Center"
                         Source="PikaPokeball.jpg"
