--- a/PokeApp/PokeApp/Pages/ListPage.xaml
+++ b/PokeApp/PokeApp/Pages/ListPage.xaml
@@ -34,7 +34,7 @@
                             CornerRadius="20">
                             <StackLayout Orientation="Horizontal">
                                 <StackLayout Spacing="10" VerticalOptions="Center">
-                                    <StackLayout Orientation="Horizontal" Spacing="20">
+                                    <StackLayout Orientation="Horizontal">
                                         <Label
                                             FontAttributes="Bold"
                                             FontSize="20"
@@ -42,7 +42,7 @@
                                         <Label
                                             FontAttributes="Bold"
                                             FontSize="20"
-                                            Text="{Binding Number}" />
+                                            Text="{Binding Number, StringFormat='#{0}'}" />
                                     </StackLayout>
                                     <StackLayout Orientation="Horizontal" Spacing="10">
                                         <Frame
